test/conformance/chainsaw/validate/clusterpolicy/standard/gvk-deprecated/crd-ready.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: dbclusters.rds.aws.crossplane.io
