test/conformance/chainsaw/validate/clusterpolicy/standard/gvk-deprecated/task.yaml
apiVersion: docdb.aws.crossplane.io/v1alpha1
kind: DBCluster
metadata:
  name: db-cluster-not-skipping-final-snapshot
spec:
  forProvider:
    skipFinalSnapshot: false
    region: eu-central-1
    engine: docdb
