test/conformance/chainsaw/validate/clusterpolicy/standard/gvk-deprecated/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: gvk
spec:
  concurrent: false
  steps:
  - name: step-00
    try:
    - apply:
        file: crd.yaml
    - assert:
        file: crd-ready.yaml
  - name: step-01
    try:
    - apply:
        file: crd-1.yaml
    - assert:
        file: crd-ready-1.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: rds-enforce-final-snapshot
  - name: step-03
    try:
    - apply:
        file: task.yaml
    - assert:
        file: task.yaml
